--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 <body>
-    
+    <div class="header" style="display: flex; justify-content: space-between;">
+        <div class="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div id="score"></div>
+    </div>
+    <div id="resultRound"></div>
+    <div id="resultGame"></div>
 </body>
 </html>
